--- a/service-router-zuul/src/main/resources/application.yml
+++ b/service-router-zuul/src/main/resources/application.yml
@@ -13,6 +13,7 @@ eureka:
     service-url:
        defaultZone: http://eureka-server-1:8761/eureka/
     registry-fetch-interval-seconds: 5
+    enabled: true
 
 zuul: 
   ignoredServices: '*'
