--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.easy.ms</groupId>
     <artifactId>spring-cloud-demo</artifactId>
@@ -21,7 +18,9 @@
         <module>service-helloworld</module>
         <module>service-helloworld-feign</module>
         <module>service-router-zuul</module>
-    </modules>
+        <module>dynamicdb-spring-boot-starter</module>
+    <module>cache-spring-boot-starter</module>
+  </modules>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -47,6 +46,11 @@
                 <version>${springframework.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.0.25</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
